[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "typers"
version = "0.2.0"
description = "A package for type checking and error handling in Python."
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Striatp", email = "striatp@outlook.com" }
]
homepage = "https://github.com/striatp/typers"
repository = "https://github.com/striatp/typers"
keywords = ["type checking", "error handling", "validation"]

[project.dependencies]
python = [">=3.6"]