[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "typers"
version = "0.2.0"
dependencies = []
requires-python = ">=3.8"
authors = [
  {name = "Striatp", email = "striatp@outlook.com"}]
maintainers = [
  {name = "Striatp", email = "striatp@outlook.com"}
]
description = "A package for type checking and error handling in Python."
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["validation", "type checking", "error handling"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]

[project.urls]
Homepage = "https://github.com/striatp/typers"
Documentation = "https://readthedocs.org"
Repository = "https://github.com/striatp/typers.git"
Changelog = "https://github.com/striatp/typers/main/blob/CHANGELOG.md"